# gliner2-candle

./: .gitignore  Cargo.toml  DEVELOP.md  README.md
src/: config.rs  count_lstm.rs  inference.rs  main.rs  model.rs  processor.rs  span_rep.rs
